2017-07-30  Eric Herman <eric@freesa.org>

Fixup headers installation, to only install the non-private headers.
Add -I./src to CFLAGS such that we can change inlcudes syntax from:
#include "foo.h" to #include <foo.h>

	* Makefile.am: fixup headers installation, -I./src
	* src/dumb-alloc.c: include "foo" to inlcude <foo>
	* src/dumb-alloc-global.c: "foo" to <foo>
	* src/dumb-alloc-global.h: "foo" to <foo>
	* src/dumb-alloc-private.h: "foo" to <foo>
	* src/dumb-os-alloc.c: "foo" to <foo>

2016-10-14  Eric Herman <eric@freesa.org>

	if 64bit, assume "size_t" is "unsigned long"
		(rather than "unsigned long long")

	* src/dumb-printf-defines.h: cast,printf from "%llu" to "%lu"

2016-10-14  Eric Herman <eric@freesa.org>

	move the "%" inside the FMT_ #defines

	* src/dumb-printf-defines.h": change the defines
	* src/dumb-alloc.c: change the printf strings
	* src/dumb-os-alloc.c: change the printf strings

2016-07-08  Eric Herman <eric@freesa.org>

	extracted five separate tests from original "main.c"

	* tests/test-dumb-alloc.h: extracted from main.c
	* tests/test_checkered_alloc.c: also
	* tests/test_free.c: also 
	* tests/test_out_of_memmory.c: also
	* tests/test_simple.c: also
	* tests/test_two_alloc.c: also
	* tests/main.c: removed
	* Makefile.am: modify check_PROGRAMS to reflect 5 separate tests
	* .gitignore: ignore new tests


2016-07-04  Eric Herman <eric@freesa.org>

	* src/dumb-os-alloc.c: define MAP_ANONYMOUS to 0x20 if not defined