@@ -1,3 +1,13 @@
+2017-08-05  Eric Herman <eric@freesa.org>
+
+remove dumb-printf-defines.h: simply always cast size_t to %lu
+
+	* src/dumb-alloc.c: unconditionally cast to %lu
+	* src/dumb-os-alloc.c: unconditionally cast to %lu
+	* src/dumb-printf-defines.h: remove file
+	* Makefile.am: remove reference to dumb-printf-defines.h
+
+
 2017-07-30  Eric Herman <eric@freesa.org>
 
 Fixup headers installation, to only install the non-private headers.
